--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "antd": "^5.19.4",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "umi": "^4.3.11",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
