--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@ant-design/pro-components": "^2.7.14",
     "antd": "^5.19.4",
+    "circular-json": "^0.5.9",
     "json-server": "^1.0.0-beta.1",
+    "locales": "^0.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-highlight-words": "^0.20.0",
+    "react-intl": "^6.6.8",
+    "react-router-dom": "^6.26.0",
     "umi": "^4.3.11",
     "umi-request": "^1.4.0"
   },
